# sdl2pp_msvc2015

./: CMakeLists.txt  README.md  appveyor.yml  debug.txt  main.cpp  release.txt
